# py-rust-bridge

./: README.md  py-rust-bridge.code-workspace  pyproject.toml
.devcontainer/: devcontainer.json
src/rust_bridge/: __init__.py  cli.py
tests/: test_cli.py
